<resources>
  <string name="about">About</string>
  <string name="accessibility_both">Both basic and plus service are enabled, this will cause conflict, please disable one.</string>
  <string name="accessibility_error">An service error is detected, which maybe caused by the application being cleaned up abnormally, please refer to the instructions for keeping the background in the help.</string>
  <string name="accessibility_need_plus">%1$s requires the plus service. You need to manually disable the basic service in the Android settings and then enable the plus service.</string>
  <string name="accessibility_permission">Accessiblity Permission</string>
  <string name="accessibility_switch">You can goto system setting to change service type.</string>
  <string name="accessibility_tip">Please enable Micro Gesture here(Basic or Plus service).</string>
  <string name="acknowledgement">Acknowledgement</string>
  <string name="action">Action</string>
  <string name="action_0">None</string>
  <string name="action_1">Back</string>
  <string name="action_2">Home</string>
  <string name="action_3">Recent Tasks</string>
  <string name="action_4">Notification</string>
  <string name="action_5">Quick Settings</string>
  <string name="action_6">Last Task</string>
  <string name="action_6_tip">Achieved by sending the multitasking key twice, the delay between the keys can be configured in the lab.</string>
  <string name="action_7">Power Dialog</string>
  <string name="action_8">Voice Assistant</string>
  <string name="action_9">Split Screen</string>
  <string name="action_A">Screen rotation auto</string>
  <string name="action_B">Screen rotation</string>
  <string name="action_C">Notification toggle</string>
  <string name="action_D">Wifi</string>
  <string name="action_D_tip">Wifi cannot be toggled directly on Android 10+</string>
  <string name="action_E">Bluetooth</string>
  <string name="action_F">Torch</string>
  <string name="action_G">Scroll up</string>
  <string name="action_G_tip">Scrolling by directly adjusting the scroll bar.</string>
  <string name="action_H">Scroll down</string>
  <string name="action_I">Left-handed mode</string>
  <string name="action_I_tip">The one-handed mode of some phones will cause some functions of the Micro Gesture to fail (volumn triggering, simulated gestures, etc.), use it carefully.</string>
  <string name="action_J">Ringer mode</string>
  <string name="action_J_tip">Switch between normal, silent and vibration</string>
  <string name="action_K">Force portrait</string>
  <string name="action_L">NFC</string>
  <string name="action_M">Right-handed mode</string>
  <string name="action_N">Screen swipe</string>
  <string name="action_N_tip">Record an arbitrary screen click, long press or swipe gesture.</string>
  <string name="action_O">Internet control panel</string>
  <string name="action_P">Wechat pay code</string>
  <string name="action_Q">Keep screen on</string>
  <string name="action_R">Touch protector</string>
  <string name="action_R_tip">Some system gestures cannot be disabled.</string>
  <string name="action_S">Volume adjust</string>
  <string name="action_T">Multi touch</string>
  <string name="action_T_tip">Record an Multi touch gesture</string>
  <string name="action_U">Location</string>
  <string name="action_V">Input</string>
  <string name="action_V_tip">Append text at the current editor</string>
  <string name="action_W">Send notication</string>
  <string name="action_Y">Play audio</string>
  <string name="action_Y_tip">Default is ringtone for notification</string>
  <string name="action_a">Media play/pause</string>
  <string name="action_b">Alipay scan QR</string>
  <string name="action_c">Alipay pay code</string>
  <string name="action_d">Wechat scan QR</string>
  <string name="action_e">Screen shot</string>
  <string name="action_edit">Modify the label and code of the action.</string>
  <string name="action_f">Popup panel</string>
  <string name="action_f_tip">Apps in the panel can trigger a small window by long pressing.</string>
  <string name="action_g">Swipe up</string>
  <string name="action_h">Swipe down</string>
  <string name="action_i">Swipe left</string>
  <string name="action_j">Swipe right</string>
  <string name="action_k">click context</string>
  <string name="action_k_tip">Click notification when notified</string>
  <string name="action_l">Lock screen</string>
  <string name="action_m">Fly Mouse</string>
  <string name="action_m1">Layout inspector</string>
  <string name="action_m2">Screen color picker</string>
  <string name="action_m_tip">Simulates a screen mouse for easy one-handed operation</string>
  <string name="action_n">Media next</string>
  <string name="action_o">Volume up</string>
  <string name="action_p">Pause gestures</string>
  <string name="action_p_tip">After paused, other gestures are invalid, and once triggered again, they can be recovered.</string>
  <string name="action_plugin">Code plugin</string>
  <string name="action_q">Volume down</string>
  <string name="action_r">Media prev</string>
  <string name="action_s">Stop gestures</string>
  <string name="action_s_tip">All gestures are disabled after stop and can only be restored via the ui or quick switch tile.</string>
  <string name="action_screen_click">Screen click</string>
  <string name="action_select_app">Launch App</string>
  <string name="action_select_more">More actions</string>
  <string name="action_select_plus_action">Actions require plus service</string>
  <string name="action_select_shortcut">App shortcut</string>
  <string name="action_select_shortcut_tip">Provided by third-party apps, some may not work properly.</string>
  <string name="action_t">Force landscape</string>
  <string name="action_u">Volume panel</string>
  <string name="action_v">Screen brightness auto</string>
  <string name="action_w">Screen brightness up</string>
  <string name="action_x">Screen brightness down</string>
  <string name="action_y">Change input method</string>
  <string name="adb_tip">%1$s need adb authorize</string>
  <string name="agree">Agree</string>
  <string name="android_not_support">Need Android %1$s to support this feature.</string>
  <string name="app_custom">App advanced</string>
  <string name="app_custom_error">Please click the right switch to enable customization.</string>
  <string name="app_custom_tip">Disable or custom gestures for each app</string>
  <string name="app_icon">App icon</string>
  <string name="app_name">Micro Gesture</string>
  <string name="app_not_installed">App not installed</string>
  <string name="browse">Browse</string>
  <string name="force_touch_prt">Touch protection even if screen off</string>
  <string name="gesture">Gesture</string>
  <string name="gesture_axis">Trigger mode</string>
  <string name="gesture_count">Repetitions</string>
  <string name="gesture_dir">Direction</string>
  <string name="gesture_key">Key pressed</string>
  <string name="gesture_on_lock">Gesture on lock screen</string>
  <string name="gesture_on_lock_tip">Works only when the screen is on</string>
  <string name="help_ack">Demo/Help</string>
  <string name="key_axis">Press key</string>
  <string name="key_axis_tip">Volume keys or other custom keys</string>
  <string name="key_mode">Key mode</string>
  <string name="lab">Lab</string>
  <string name="lab_tip">Advanced or experimental features</string>
  <string name="landscape_mode">Landscape mode</string>
  <string name="last_task_delay">Delay between two Recent for last task</string>
  <string name="main_switch">Main switch</string>
  <string name="mouse_always_on">Mouse pad always show</string>
  <string name="mouse_always_on_tip">Trigger again to hide</string>
  <string name="mouse_pad_float">Mouse pad floating</string>
  <string name="mouse_speed">Mouse speed</string>
  <string name="off_scr_long_press">Lock screen volume long press</string>
  <string name="one_hand_mode">One-handed mode</string>
  <string name="other">Other</string>
  <string name="panel_apps_num">Number of recent apps in panel</string>
  <string name="panel_edit">Panel</string>
  <string name="panel_edit_tip">Panel can be used for any gesture</string>
  <string name="panel_height">Panel max height</string>
  <string name="panel_padding_bottom">Panel distance from bottom(Portrait)</string>
  <string name="panel_padding_left">Panel distance from left</string>
  <string name="pixel_match">Pixel matching</string>
  <string name="pixel_match_tip">Pixel matching allows exact matching by pixel color on screen in Super Shortcut for enhanced automation, you need to re-authorize after each reboot.</string>
  <string name="plugin_code">Plugin code</string>
  <string name="plugin_help">Help</string>
  <string name="plugin_name">Plugin Name</string>
  <string name="plugin_paste">Paste</string>
  <string name="plugin_test">Test</string>
  <string name="robot">Automation</string>
  <string name="robot_action">Action</string>
  <string name="robot_class">Class of the element</string>
  <string name="robot_class_tip">Can be left blank, match only specific events to optimize performance and reduce the impact on the clicked app, the value can be copied from the class attribute in the history.</string>
  <string name="robot_filter">Filter</string>
  <string name="robot_filter_tip">Can be left blank, used to filter the result elements, the filter is divided by semicolon, the conditions can be v(visible), c(clickable), e(editable), w(width), h(height), x/y(center Coordinate),x1/x2/y1/y2(left/right/top/bottom coordinate), for example, v=1;x1&gt;100 means that visible elements and x1 is greater than 100.</string>
  <string name="robot_history">Last 5 trigger history</string>
  <string name="robot_interval">Interval time</string>
  <string name="robot_interval_tip">To prevent repeated triggering, set this interval in milliseconds, with positive values indicating a delay after the trigger and negative values a delay before the trigger.</string>
  <string name="robot_locked_policy">Execution mode on lock screen</string>
  <string name="robot_memo">Memo</string>
  <string name="robot_node">Element to match</string>
  <string name="robot_package">Select App</string>
  <string name="robot_source">Trigger Type</string>
  <string name="robot_tip">Automatically click or perform custom actions</string>
  <string name="setting">Setting</string>
  <string name="sw_hide_in_recents">Hide in Android recent tasks</string>
  <string name="sw_hide_in_recents_tip">It is recommended to lock the App first, then enable this switch.</string>
  <string name="system_vibrate">Use system vibrator</string>
  <string name="system_vibrate_tip">Get better vibration on some phones</string>
  <string name="thresh">Sensitivity</string>
  <string name="thresh_tip">Smaller is more sensitive</string>
  <string name="toast_feedback">Toast feedback on gesture</string>
  <string name="toast_feedback_tip">Some phones prohibit background pop-up prompts, so this may not work.</string>
  <string name="vibrate_intensity">Vibrate intensity on gesture</string>
  <string name="vibrate_on_robot">Vibrate on automation</string>
  <string name="work_some_devices">Works only on some devices</string>
  <string name="x_axis">Rotate by X axis</string>
  <string name="x_axis_tip">Tilt up and down</string>
  <string name="y_axis">Rotate by Y axis</string>
  <string name="y_axis_tip">Tilt left and right</string>
  <string name="z_axis">Rotate by Z axis</string>
  <string name="z_axis_tip">Like rotating phone on a table</string>
</resources>