<?xml version='1.0' encoding='utf-8' ?>
<PreferenceScreen android:key="preferences" xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/main_switch"
                      android:key="cat_main_switch">
    <SwitchPreference android:title="@string/app_name"
                      android:key="main_switch"
                      android:defaultValue="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/gesture"
                      android:key="cat_gesture">
    <Preference android:key="gesture_0" />
    <Preference android:key="gesture_1" />
    <Preference android:key="gesture_2" />
    <Preference android:key="gesture_3" />
    <Preference android:key="gesture_4" />
    <Preference android:key="gesture_5" />
    <Preference android:key="gesture_6" />
    <Preference android:key="gesture_7" />
    <Preference android:key="gesture_8" />
    <Preference android:key="gesture_9" />
    <Preference android:key="gesture_10" />
    <Preference android:key="gesture_11" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/setting"
                      android:key="cat_setting">
    <me.i38.gesture.components.SeekBarPreference android:persistent="false"
                          android:max="30"
                          android:title="@string/vibrate_intensity"
                          android:key="vibrate"
                          min="0"
                          unitsLeft=""
                          unitsRight="" />
    <SwitchPreference android:persistent="false"
                      android:title="@string/toast_feedback"
                      android:key="toast"
                      android:summary="@string/toast_feedback_tip" />
    <Preference android:persistent="false"
                android:title="@string/panel_edit"
                android:key="panel_edit"
                android:summary="@string/panel_edit_tip" />
    <ListPreference android:persistent="false"
                    android:entries="@array/landscape_mode_entry"
                    android:title="@string/landscape_mode"
                    android:key="landscape_mode"
                    android:summary="%s"
                    android:entryValues="@array/landscape_mode_values" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/other"
                      android:key="cat_other">
    <Preference android:persistent="false"
                android:title="@string/robot"
                android:key="robot"
                android:summary="@string/robot_tip" />
    <Preference android:persistent="false"
                android:title="@string/app_custom"
                android:key="app_custom"
                android:summary="@string/app_custom_tip" />
    <SwitchPreference android:title="@string/sw_hide_in_recents"
                      android:key="hide_in_recents"
                      android:summary="@string/sw_hide_in_recents_tip"
                      android:defaultValue="false" />
    <Preference android:persistent="false"
                android:title="@string/lab"
                android:key="lab"
                android:summary="@string/lab_tip" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/about"
                      android:key="cat_about">
    <Preference android:persistent="false"
                android:title="@string/app_name"
                android:key="about" />
    <Preference android:persistent="false"
                android:title="@string/help_ack"
                android:key="help_ack" />
  </PreferenceCategory>
</PreferenceScreen>