<?xml version='1.0' encoding='utf-8' ?>
<PreferenceScreen android:key="lab" xmlns:android="http://schemas.android.com/apk/res/android">
  <SwitchPreference android:title="@string/gesture_on_lock"
                    android:key="gesture_on_lock"
                    android:summary="@string/gesture_on_lock_tip"
                    android:defaultValue="false" />
  <SwitchPreference android:title="@string/system_vibrate"
                    android:key="system_vibrate"
                    android:summary="@string/system_vibrate_tip"
                    android:defaultValue="false" />
  <SwitchPreference android:title="@string/off_scr_long_press"
                    android:key="off_scr_long_press"
                    android:summary="@string/work_some_devices"
                    android:defaultValue="false" />
  <SwitchPreference android:title="@string/force_touch_prt"
                    android:key="force_touch_prt"
                    android:defaultValue="false" />
  <SwitchPreference android:title="@string/vibrate_on_robot"
                    android:key="vibrate_on_robot"
                    android:defaultValue="true" />
  <SwitchPreference android:persistent="false"
                    android:title="@string/pixel_match"
                    android:key="pixel_match"
                    android:summary="@string/pixel_match_tip" />
  <ListPreference android:entries="@array/one_hand_mode_entry"
                  android:title="@string/one_hand_mode"
                  android:key="one_hand_mode"
                  android:summary="%s"
                  android:defaultValue="0"
                  android:entryValues="@array/one_hand_mode_values" />
  <me.i38.gesture.components.SeekBarPreference android:max="12"
                        android:title="@string/last_task_delay"
                        android:key="last_task_delay"
                        android:defaultValue="5"
                        min="1"
                        unitsLeft=""
                        unitsRight="" />
  <PreferenceCategory android:title="@string/action_f">
    <me.i38.gesture.components.SeekBarPreference android:max="30"
                          android:title="@string/panel_apps_num"
                          android:key="panel_apps_num"
                          android:defaultValue="5"
                          min="0"
                          unitsLeft=""
                          unitsRight="" />
    <me.i38.gesture.components.SeekBarPreference android:max="800"
                          android:title="@string/panel_height"
                          android:key="panel_height"
                          android:defaultValue="300"
                          min="85"
                          unitsLeft=""
                          unitsRight="" />
    <me.i38.gesture.components.SeekBarPreference android:max="150"
                          android:title="@string/panel_padding_left"
                          android:key="panel_padding_left"
                          android:defaultValue="50"
                          min="5"
                          unitsLeft=""
                          unitsRight="" />
    <me.i38.gesture.components.SeekBarPreference android:max="300"
                          android:title="@string/panel_padding_bottom"
                          android:key="panel_padding_bottom"
                          android:defaultValue="50"
                          min="5"
                          unitsLeft=""
                          unitsRight="" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/action_m">
    <SwitchPreference android:title="@string/mouse_always_on"
                      android:key="mouse_always_on"
                      android:summary="@string/mouse_always_on_tip"
                      android:defaultValue="false" />
    <SwitchPreference android:title="@string/mouse_pad_float"
                      android:key="mouse_pad_float"
                      android:defaultValue="false" />
    <me.i38.gesture.components.SeekBarPreference android:max="20"
                          android:title="@string/mouse_speed"
                          android:key="mouse_speed"
                          android:defaultValue="4"
                          min="1"
                          unitsLeft=""
                          unitsRight="" />
  </PreferenceCategory>
</PreferenceScreen>