<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:padding="5.0dp"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
    <Button android:textSize="10.0sp"
            android:id="@id/plugin_browse"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:text="@string/browse"
            android:layout_weight="1.0" />
    <Button android:textSize="10.0sp"
            android:id="@id/plugin_paste"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:text="@string/plugin_paste"
            android:layout_weight="1.0" />
    <Button android:textSize="10.0sp"
            android:id="@id/plugin_help"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:text="@string/plugin_help"
            android:layout_weight="1.0" />
    <Button android:textSize="10.0sp"
            android:id="@id/plugin_test"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:text="@string/plugin_test"
            android:layout_weight="1.0" />
  </LinearLayout>
  <EditText android:id="@id/editName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plugin_name"
            android:ems="10"
            android:inputType="text" />
  <EditText android:textSize="14.0sp"
            android:id="@id/editUri"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plugin_code"
            android:ems="10"
            android:inputType="textMultiLine" />
</LinearLayout>